# app.js
@@ -12,6 +12,7 @@ require('dotenv').config();
 
 // the routes
 const groupRts = require('./routes/base/group')
+const levelRts = require('./routes/base/level')
 
 
 // connexion a la base de donnees
@@ -43,5 +44,6 @@ app.use('/images', express.static(path.join(__dirname, 'images')));
 
 // endpoint root
 app.use('/security/groups', groupRts)
+app.use('/security/levels', levelRts)
 
 module.exports = app;
